--- a/googledatabinding/src/main/res/menu/activity_main.xml
+++ b/googledatabinding/src/main/res/menu/activity_main.xml
@@ -1,8 +1,11 @@
-<menu xmlns:android = "http://schemas.android.com/apk/res/android"
+<menu tools:context = ".ActivityMain"
+      xmlns:android = "http://schemas.android.com/apk/res/android"
       xmlns:tools = "http://schemas.android.com/tools"
-      tools:context = ".ActivityMain">
-	<item android:id = "@+id/action_settings"
-	      android:title = "@string/action_settings"
-	      android:orderInCategory = "100"
-	      android:showAsAction = "never"/>
+	>
+	<item
+		android:id = "@+id/action_load_fragment00"
+		android:orderInCategory = "100"
+		android:showAsAction = "never"
+		android:title = "@string/action_load_fragment00"
+		/>
 </menu>
