--- a/googledatabinding/src/main/res/menu/activity_main.xml
+++ b/googledatabinding/src/main/res/menu/activity_main.xml
@@ -8,4 +8,10 @@
 		android:showAsAction = "never"
 		android:title = "@string/action_load_fragment00"
 		/>
+	<item
+		android:id = "@+id/action_new_activity"
+		android:orderInCategory = "100"
+		android:showAsAction = "never"
+		android:title = "@string/action_new_activity"
+		/>
 </menu>
