--- a/effectiveandroidui/src/main/res/values/styles.xml
+++ b/effectiveandroidui/src/main/res/values/styles.xml
@@ -1,11 +1,110 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-	<!-- Base application theme. -->
-	<style name = "AppTheme" parent = "Theme.AppCompat.Light.DarkActionBar">
-		<!-- Customize your theme here. -->
-		<item name = "colorPrimary">@color/colorPrimary</item>
-		<item name = "colorPrimaryDark">@color/colorPrimaryDark</item>
-		<item name = "colorAccent">@color/colorAccent</item>
-	</style>
+  <!-- Application theme -->
+
+  <style name="AppTheme" parent="Theme.AppCompat.Light">
+    <item name="android:windowBackground">@color/main_color</item>
+  </style>
+
+  <style name="AppTheme.RootView">
+    <item name="android:layout_width">match_parent</item>
+    <item name="android:layout_height">match_parent</item>
+  </style>
+
+  <style name="AppTheme.RootView.Vertical">
+    <item name="android:orientation">vertical</item>
+  </style>
+
+  <style name="AppTheme.Image">
+    <item name="android:scaleType">centerCrop</item>
+    <item name="android:background">@color/main_color</item>
+  </style>
+
+  <style name="AppTheme.Title">
+    <item name="android:textStyle">bold</item>
+    <item name="android:textColor">@color/fourth_color</item>
+    <item name="android:layout_width">match_parent</item>
+    <item name="android:layout_height">wrap_content</item>
+  </style>
+
+  <style name="AppTheme.Subtitle">
+    <item name="android:textColor">@color/third_color</item>
+    <item name="android:layout_width">match_parent</item>
+    <item name="android:layout_height">wrap_content</item>
+  </style>
+
+  <style name="AppTheme.GridView">
+    <item name="android:layout_width">match_parent</item>
+    <item name="android:layout_height">match_parent</item>
+    <item name="android:numColumns">@integer/tv_shows_grid_view_num_colums</item>
+    <item name="android:verticalSpacing">@dimen/main_margin</item>
+    <item name="android:horizontalSpacing">@dimen/main_margin</item>
+  </style>
+
+  <style name="AppTheme.ListView">
+    <item name="android:layout_width">match_parent</item>
+    <item name="android:layout_height">match_parent</item>
+    <item name="android:dividerHeight">@dimen/divider_height</item>
+    <item name="android:divider">@color/sixth_color</item>
+  </style>
+
+  <style name="AppTheme.ProgressBar">
+    <item name="android:layout_width">wrap_content</item>
+    <item name="android:layout_height">wrap_content</item>
+    <item name="android:layout_centerVertical">true</item>
+    <item name="android:layout_centerHorizontal">true</item>
+    <item name="android:layout_gravity">center</item>
+    <item name="android:visibility">gone</item>
+  </style>
+
+  <style name="AppTheme.EmptyCase">
+    <item name="android:layout_width">wrap_content</item>
+    <item name="android:layout_height">wrap_content</item>
+    <item name="android:layout_centerVertical">true</item>
+    <item name="android:layout_centerHorizontal">true</item>
+    <item name="android:gravity">center</item>
+    <item name="android:layout_gravity">center</item>
+    <item name="android:visibility">gone</item>
+    <item name="android:src">@drawable/empty_case</item>
+  </style>
+
+  <style name="AppTheme.TvShow">
+    <item name="android:layout_width">match_parent</item>
+    <item name="android:layout_height">wrap_content</item>
+    <item name="android:background">@color/secondary_color</item>
+  </style>
+
+  <style name="AppTheme.Image.TvShow">
+    <item name="android:layout_width">fill_parent</item>
+    <item name="android:layout_height">@dimen/poster_height</item>
+  </style>
+
+  <style name="AppTheme.Title.TvShow">
+    <item name="android:ellipsize">end</item>
+    <item name="android:singleLine">true</item>
+    <item name="android:layout_marginLeft">@dimen/secondary_margin</item>
+  </style>
+
+  <style name="AppTheme.Subtitle.TvShow">
+    <item name="android:ellipsize">end</item>
+    <item name="android:singleLine">true</item>
+    <item name="android:layout_marginLeft">@dimen/secondary_margin</item>
+    <item name="android:paddingBottom">@dimen/main_margin</item>
+  </style>
+
+  <style name="AppTheme.Image.TvShowFranArt">
+    <item name="android:layout_width">fill_parent</item>
+    <item name="android:layout_height">@dimen/fan_art_height</item>
+  </style>
+
+  <style name="AppTheme.TextListViewHeader">
+    <item name="android:layout_height">wrap_content</item>
+    <item name="android:layout_width">match_parent</item>
+    <item name="android:background">@color/secondary_color</item>
+    <item name="android:textColor">@color/third_color</item>
+    <item name="android:padding">@dimen/main_margin</item>
+  </style>
+
 
 </resources>
