Added: using different structure with observablefields and the presentation model contained and @Retained within the fragment

--- a/googledatabinding01/src/main/res/layout/fragment_main.xml
+++ b/googledatabinding01/src/main/res/layout/fragment_main.xml
@@ -4,8 +4,8 @@
 	<data>
 
 		<variable
-			name = "user"
-			type = "com.nullcognition.googledatabinding01.ViewModel"
+			name = "presModel"
+			type = "com.nullcognition.googledatabinding01.PresentationModel"
 			/>
 
 		<variable
@@ -24,7 +24,7 @@
 			android:layout_height = "wrap_content"
 			android:layout_width = "match_parent"
 			android:textAppearance = "?android:attr/textAppearanceLarge"
-		    android:text="@{user.price ?? @string/defaultPrice}"
+		    android:text="@{presModel.text ?? @string/defaultPrice}"
 			/>
 
 		<Button
