--- a/googledatabinding01/src/main/res/layout/activity_main.xml
+++ b/googledatabinding01/src/main/res/layout/activity_main.xml
@@ -1,21 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-	android:id = "@+id/linearLayout"
-	android:layout_height = "match_parent"
-	android:layout_width = "match_parent"
-	android:orientation = "vertical"
-	android:paddingBottom = "@dimen/activity_vertical_margin"
-	android:paddingLeft = "@dimen/activity_horizontal_margin"
-	android:paddingRight = "@dimen/activity_horizontal_margin"
-	android:paddingTop = "@dimen/activity_vertical_margin"
-	tools:context = ".MainActivity"
-	xmlns:android = "http://schemas.android.com/apk/res/android"
-	xmlns:tools = "http://schemas.android.com/tools"
-	>
+<layout xmlns:android = "http://schemas.android.com/apk/res/android">
 
-	<TextView
-		android:layout_height = "wrap_content"
-		android:layout_width = "wrap_content"
-		android:text = "Mainactivity"
-		/>
-</LinearLayout>
+	<data>
+
+	</data>
+
+	<LinearLayout
+		android:background = "#ff7575"
+		android:id = "@+id/linearLayout"
+		android:layout_height = "match_parent"
+		android:layout_width = "match_parent"
+		android:orientation = "vertical"
+		android:paddingBottom = "@dimen/activity_vertical_margin"
+		android:paddingLeft = "@dimen/activity_horizontal_margin"
+		android:paddingRight = "@dimen/activity_horizontal_margin"
+		android:paddingTop = "@dimen/activity_vertical_margin"
+		tools:context = ".MainActivity"
+		xmlns:tools = "http://schemas.android.com/tools"
+		>
+
+		<TextView
+			android:layout_height = "wrap_content"
+			android:layout_width = "wrap_content"
+			android:text = "Mainactivity"
+			/>
+
+		<LinearLayout
+			android:layout_height = "wrap_content"
+			android:layout_width = "match_parent"
+			android:orientation = "horizontal"
+			>
+
+			<Button
+				android:id = "@+id/btn_c00"
+				android:layout_height = "wrap_content"
+				android:layout_width = "wrap_content"
+				android:onClick = ""
+				android:text = "Conf00"
+				/>
+
+			<Button
+				android:id = "@+id/btn_c01"
+				android:layout_height = "wrap_content"
+				android:layout_width = "wrap_content"
+				android:text = "Conf01"
+				/>
+
+			<Button
+				android:id = "@+id/btn_c02"
+				android:layout_height = "wrap_content"
+				android:layout_width = "wrap_content"
+				android:text = "Conf02"
+				/>
+
+			<Button
+				android:id = "@+id/btn_c03"
+				android:layout_height = "wrap_content"
+				android:layout_width = "wrap_content"
+				android:text = "Conf03"
+				/>
+
+		</LinearLayout>
+
+		<FrameLayout
+			android:layout_height = "match_parent"
+			android:layout_width = "match_parent"
+			android:id = "@+id/content"
+			/>
+
+	</LinearLayout>
+
+</layout>
