--- a/googledatabinding/src/main/res/layout/last.xml
+++ b/googledatabinding/src/main/res/layout/last.xml
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android = "http://schemas.android.com/apk/res/android"
-	>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="1dp"
+    android:layout_height="1dp"
+    />
+    <!--<layout xmlns:android = "http://schemas.android.com/apk/res/android"-->
 
-	<data>
+    <!--&gt;-->
 
-		<variable
-			name = "user" type = "com.nullcognition.googledatabinding.User"
-			/>
-	</data>
+    <!--<data>-->
 
-	<TextView
-		android:layout_height = "wrap_content" android:layout_width = "wrap_content"
-		android:text = "@{user.lastName}"
-		/>
+    <!--<variable-->
+    <!--name = "user" type = "com.nullcognition.googledatabinding.User"-->
+    <!--/>-->
+    <!--</data>-->
 
-</layout>
+    <!--<TextView-->
+    <!--android:layout_height = "wrap_content" android:layout_width = "wrap_content"-->
+    <!--android:text = "@{user.lastName}"-->
+    <!--/>-->
+
+    <!--</layout>-->
