--- a/googledatabinding/src/main/res/layout/name_last.xml
+++ b/googledatabinding/src/main/res/layout/name_last.xml
@@ -1,64 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android = "http://schemas.android.com/apk/res/android" xmlns:bind = "http://schemas.android.com/apk/res-auto"
-	>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="1dp"
+    android:layout_height="1dp"
+    />
+    <!--<layout xmlns:android = "http://schemas.android.com/apk/res/android" xmlns:bind = "http://schemas.android.com/apk/res-auto"-->
+    <!--&gt;-->
 
-	<data class = "Changed">
-		<!-- changed from NameLastBinding-->
+    <!--<data class = "Changed">-->
+    <!--&lt;!&ndash; changed from NameLastBinding&ndash;&gt;-->
 
-		<import
-			alias = "AliasColor" type = "android.graphics.Color"
-			/>
+    <!--<import-->
+    <!--alias = "AliasColor" type = "android.graphics.Color"-->
+    <!--/>-->
 
-		<import
-			type = "com.nullcognition.googledatabinding.Color"
-			/>
+    <!--<import-->
+    <!--type = "com.nullcognition.googledatabinding.Color"-->
+    <!--/>-->
 
-		<import
-			alias = "Format" type = "com.nullcognition.googledatabinding.User"
-			/>
+    <!--<import-->
+    <!--alias = "Format" type = "com.nullcognition.googledatabinding.User"-->
+    <!--/>-->
 
-		<variable
-			name = "user" type = "com.nullcognition.googledatabinding.User"
-			/>
+    <!--<variable-->
+    <!--name = "user" type = "com.nullcognition.googledatabinding.User"-->
+    <!--/>-->
 
-		<variable
-			name = "handler" type = "com.nullcognition.googledatabinding.MyClickHandler"
-			/>
+    <!--<variable-->
+    <!--name = "handler" type = "com.nullcognition.googledatabinding.MyClickHandler"-->
+    <!--/>-->
 
-		<variable
-			name = "note" type = "String"
-			/>
-		<!--If the variable is a base class or interface that does not implement the Observable* interface, the variables will not be observed!-->
-	</data>
+    <!--<variable-->
+    <!--name = "note" type = "String"-->
+    <!--/>-->
+    <!--&lt;!&ndash;If the variable is a base class or interface that does not implement the Observable* interface, the variables will not be observed!&ndash;&gt;-->
+    <!--</data>-->
 
-	<LinearLayout
-		android:background = "#8cff72"
-		android:layout_height = "match_parent"
-		android:layout_width = "match_parent"
-		android:orientation = "vertical"
-		>
+    <!--<LinearLayout-->
+    <!--android:background = "#8cff72"-->
+    <!--android:layout_height = "match_parent"-->
+    <!--android:layout_width = "match_parent"-->
+    <!--android:orientation = "vertical"-->
+    <!--&gt;-->
 
-		<TextView
-			android:layout_height = "wrap_content"
-			android:layout_width = "wrap_content"
-			android:text = "DataBinding00"
-			/>
+    <!--<TextView-->
+    <!--android:layout_height = "wrap_content"-->
+    <!--android:layout_width = "wrap_content"-->
+    <!--android:text = "DataBinding00"-->
+    <!--/>-->
 
-		<!-- Referencing the class Colors field-->
-		<TextView
-			android:background = "@{AliasColor.MAGENTA}"
-			android:layout_height = "wrap_content"
-			android:layout_width = "wrap_content"
-			android:onClick = "@{user.isOn ? handler.isOn : handler.isOff}"
-			android:text = "@{Format.externalModification(user.firstName)}"
-			/>
+    <!--&lt;!&ndash; Referencing the class Colors field&ndash;&gt;-->
+    <!--<TextView-->
+    <!--android:background = "@{AliasColor.MAGENTA}"-->
+    <!--android:layout_height = "wrap_content"-->
+    <!--android:layout_width = "wrap_content"-->
+    <!--android:onClick = "@{user.isOn ? handler.isOn : handler.isOff}"-->
+    <!--android:text = "@{Format.externalModification(user.firstName)}"-->
+    <!--/>-->
 
-		<!-- include binding the user variable from this layout to the included-->
-		<include
-			bind:user = "@{user}"
-			layout = "@layout/last"
-			/>
+    <!--&lt;!&ndash; include binding the user variable from this layout to the included&ndash;&gt;-->
+    <!--<include-->
+    <!--bind:user = "@{user}"-->
+    <!--layout = "@layout/last"-->
+    <!--/>-->
 
-	</LinearLayout>
+    <!--</LinearLayout>-->
 
-</layout>
+    <!--</layout>-->
