--- a/googledatabinding01/src/main/res/layout/fragment_main.xml
+++ b/googledatabinding01/src/main/res/layout/fragment_main.xml
@@ -1,55 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android = "http://schemas.android.com/apk/res/android" xmlns:app = "http://schemas.android.com/apk/res-auto"
-	>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+		android:layout_width="1dp"
+		android:layout_height="1dp"
+		/>
+		<!--<layout xmlns:android = "http://schemas.android.com/apk/res/android" xmlns:app = "http://schemas.android.com/apk/res-auto"-->
+		<!--&gt;-->
 
 
-	<data>
+		<!--<data>-->
 
-		<import type = "android.view.View"/>
+		<!--<import type = "android.view.View"/>-->
 
-		<variable
-			name = "concreteModel"
-			type = "com.nullcognition.googledatabinding01.view.viewmodel.ConcreteViewModel"
-			/>
+		<!--<variable-->
+		<!--name = "concreteModel"-->
+		<!--type = "com.nullcognition.googledatabinding01.view.viewmodel.ConcreteViewModel"-->
+		<!--/>-->
 
-		<variable
-			name = "concreteViewModel"
-			type = "com.nullcognition.googledatabinding01.view.viewmodel.ConcreteViewModel"
-			/>
+		<!--<variable-->
+		<!--name = "concreteViewModel"-->
+		<!--type = "com.nullcognition.googledatabinding01.view.viewmodel.ConcreteViewModel"-->
+		<!--/>-->
 
-		<variable
-			name = "controller"
-			type = "com.nullcognition.googledatabinding01.controller.Controller"
-			/>
-	</data>
+		<!--<variable-->
+		<!--name = "controller"-->
+		<!--type = "com.nullcognition.googledatabinding01.controller.Controller"-->
+		<!--/>-->
+		<!--</data>-->
 
-	<LinearLayout
-		android:layout_height = "match_parent"
-		android:layout_width = "match_parent"
-		android:orientation = "vertical"
-		>
+		<!--<LinearLayout-->
+		<!--android:layout_height = "match_parent"-->
+		<!--android:layout_width = "match_parent"-->
+		<!--android:orientation = "vertical"-->
+		<!--&gt;-->
 
-		<EditText
-			android:id = "@+id/editText"
-			android:layout_height = "wrap_content" android:layout_width = "wrap_content"
-			app:textWatcher = "@{controller.tw}"
-			/>
-			<!--android:text = "@{concreteModel.editText}"-->
-
-		<!--<TextView-->
-			<!--android:layout_height = "wrap_content"-->
-			<!--android:layout_width = "match_parent"-->
-			<!--android:text = "@{concreteModel.text ?? @string/defaultPrice}"-->
-			<!--android:textAppearance = "?android:attr/textAppearanceLarge"-->
-			<!--android:visibility = "@{concreteModel.isShowing ? View.VISIBLE : View.GONE}"-->
+		<!--<EditText-->
+		<!--android:id = "@+id/editText"-->
+		<!--android:layout_height = "wrap_content" android:layout_width = "wrap_content"-->
+		<!--app:textWatcher = "@{controller.tw}"-->
 			<!--/>-->
+		<!--&lt;!&ndash;android:text = "@{concreteModel.editText}"&ndash;&gt;-->
 
-		<Button
-			android:layout_height = "wrap_content" android:layout_width = "wrap_content"
-			android:onClick = "@{controller.controllerButtonClick}"
-			android:text = "@{controller.CONTROLLER_BUTTON_TEXT}"
-			/>
+		<!--&lt;!&ndash;<TextView&ndash;&gt;-->
+		<!--&lt;!&ndash;android:layout_height = "wrap_content"&ndash;&gt;-->
+		<!--&lt;!&ndash;android:layout_width = "match_parent"&ndash;&gt;-->
+		<!--&lt;!&ndash;android:text = "@{concreteModel.text ?? @string/defaultPrice}"&ndash;&gt;-->
+		<!--&lt;!&ndash;android:textAppearance = "?android:attr/textAppearanceLarge"&ndash;&gt;-->
+		<!--&lt;!&ndash;android:visibility = "@{concreteModel.isShowing ? View.VISIBLE : View.GONE}"&ndash;&gt;-->
+		<!--&lt;!&ndash;/>&ndash;&gt;-->
 
-	</LinearLayout>
+		<!--<Button-->
+		<!--android:layout_height = "wrap_content" android:layout_width = "wrap_content"-->
+		<!--android:onClick = "@{controller.controllerButtonClick}"-->
+		<!--android:text = "@{controller.CONTROLLER_BUTTON_TEXT}"-->
+		<!--/>-->
 
-</layout>
+		<!--</LinearLayout>-->
+
+		<!--</layout>-->
