--- a/joebirchmvvm/src/main/res/layout/item_comments_header.xml
+++ b/joebirchmvvm/src/main/res/layout/item_comments_header.xml
@@ -1,59 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="1dp"
+    android:layout_height="1dp"
+    />
+    <!--<layout xmlns:android="http://schemas.android.com/apk/res/android">-->
 
-    <data>
-        <variable name="viewModel" type="com.nullcognition.joebirchmvvm.viewModel.CommentHeaderViewModel" />
-    </data>
+    <!--<data>-->
+    <!--<variable name="viewModel" type="com.nullcognition.joebirchmvvm.viewModel.CommentHeaderViewModel" />-->
+    <!--</data>-->
 
-    <FrameLayout
-        android:id="@+id/container_item"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center">
+    <!--<FrameLayout-->
+    <!--android:id="@+id/container_item"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_gravity="center">-->
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:background="@color/white"
-            android:padding="16dp">
+    <!--<LinearLayout-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:orientation="vertical"-->
+    <!--android:background="@color/white"-->
+    <!--android:padding="16dp">-->
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp">
+    <!--<RelativeLayout-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_marginBottom="8dp">-->
 
-                <TextView
-                    android:id="@+id/text_post_author"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:text="@{viewModel.commentAuthor}"
-                    android:textColor="@color/black_87pc"
-                    android:textSize="@dimen/text_body" />
+    <!--<TextView-->
+    <!--android:id="@+id/text_post_author"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_alignParentLeft="true"-->
+    <!--android:text="@{viewModel.commentAuthor}"-->
+    <!--android:textColor="@color/black_87pc"-->
+    <!--android:textSize="@dimen/text_body" />-->
 
-                <TextView
-                    android:id="@+id/text_post_date"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_toRightOf="@+id/text_post_author"
-                    android:text="@{viewModel.commentDate}"
-                    android:textSize="@dimen/text_body"
-                    android:textColor="@color/hn_orange" />
+    <!--<TextView-->
+    <!--android:id="@+id/text_post_date"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_toRightOf="@+id/text_post_author"-->
+    <!--android:text="@{viewModel.commentDate}"-->
+    <!--android:textSize="@dimen/text_body"-->
+    <!--android:textColor="@color/hn_orange" />-->
 
-            </RelativeLayout>
+    <!--</RelativeLayout>-->
 
-            <TextView
-                android:id="@+id/text_post_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:autoLink="web|email"
-                android:text="@{viewModel.commentText}"
-                android:textColor="@android:color/black"
-                android:textSize="18sp" />
+    <!--<TextView-->
+    <!--android:id="@+id/text_post_text"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:autoLink="web|email"-->
+    <!--android:text="@{viewModel.commentText}"-->
+    <!--android:textColor="@android:color/black"-->
+    <!--android:textSize="18sp" />-->
 
-        </LinearLayout>
+    <!--</LinearLayout>-->
 
-    </FrameLayout>
+    <!--</FrameLayout>-->
 
-</layout>
+    <!--</layout>-->
