Testing tinting with svg, didn't then did work, not sure why but I used a different layout. The error was that I was casting to the wrong type in my findviewbyid, which was refrencing a view that I had changed from PercentRelative to LinearLayout, thus I tried rebuilding and invalidating caches but only the layout change worked.

--- a/svg/src/main/res/values/colors.xml
+++ b/svg/src/main/res/values/colors.xml
@@ -3,6 +3,6 @@
   <color name="colorPrimary">#3F51B5</color>
   <color name="colorPrimaryDark">#303F9F</color>
   <color name="colorAccent">#FF4081</color>
-  <color name="topGradient">#FFAA00</color>
-  <color name="botGradient">#D8000000</color>
+  <color name="topGradient">#8a8a8a</color>
+  <color name="botGradient">#252525</color>
 </resources>
