--- a/svg/src/main/res/layout/test.xml
+++ b/svg/src/main/res/layout/test.xml
@@ -1,35 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
+    android:id="@+id/test"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/splash_gradient"
-    tools:context="com.nullcognition.svg.MainActivity"
-
+    android:background="@color/colorPrimaryDark"
+    android:orientation="vertical"
     >
+
 
   <ImageView
       android:id="@+id/cir"
       android:layout_width="100dp"
       android:layout_height="100dp"
-      android:layout_alignParentStart="true"
-      android:layout_alignTop="@+id/bg_car"
       android:layout_marginStart="80dp"
       android:layout_marginTop="17dp"
       app:srcCompat="@drawable/cir"
       />
+  <!--some say tint after source to make it work-->
+  <!--android:theme="@style/ColorStyle"-->
   <!--android:tint="@color/colorAccent"-->
-  <!--app:theme="@style/ColorStyle"-->
+  <!--tint is now working-->
+  <!--android:tint="@color/colorAccent"-->
   <!--android:theme="@style/ColorStyle"-->
   <ImageView
       android:id="@+id/ic_waxxi"
       android:layout_width="100dp"
       android:layout_height="100dp"
-      android:layout_alignParentEnd="true"
-      android:layout_below="@+id/cir"
       android:layout_marginEnd="63dp"
       android:layout_marginTop="44dp"
       app:srcCompat="@drawable/bake_trans"
@@ -39,9 +36,7 @@
       android:id="@+id/bg_car"
       android:layout_width="100dp"
       android:layout_height="100dp"
-      android:layout_alignParentTop="true"
       android:layout_marginTop="52dp"
-      android:layout_toEndOf="@+id/srcd"
       app:srcCompat="@drawable/car"
       />
 
@@ -49,11 +44,10 @@
       android:id="@+id/srcd"
       android:layout_width="100dp"
       android:layout_height="100dp"
-      android:layout_below="@+id/ic_waxxi"
       android:layout_marginStart="82dp"
       android:layout_marginTop="18dp"
-      android:layout_toEndOf="@+id/cir"
       android:src="@android:drawable/btn_default"
       />
 
-</RelativeLayout>
+
+</LinearLayout>
