--- a/svg/src/main/res/values/styles.xml
+++ b/svg/src/main/res/values/styles.xml
@@ -8,4 +8,8 @@
     <item name="colorAccent">@color/colorAccent</item>
   </style>
 
+  <style name="ColorStyle">
+    <item name="myattr">@color/colorAccent</item>
+  </style>
+
 </resources>
